<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="9"
    tools:context="pl.gda.pg.eti.kask.am.mobilefood.logic.ProductActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="35sp"
            android:gravity="left"
            android:text="@string/products_header_label"
            android:layout_margin="15dp"
            android:textColor="@android:color/holo_blue_dark" />
        <ListView
            android:id="@+id/list_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp"
        android:background="@color/colorPrimaryDark"
        >
        <Button
            android:id="@+id/button_configure_tags"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/configure_observed_tags_label"
            />
        <Button
            android:id="@+id/button_add_product"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/addProductLabel"
            />
        <Button
            android:id="@+id/button_sync"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/syncLabel"
            />
    </LinearLayout>
</LinearLayout>
