<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context="pl.gda.pg.eti.kask.am.mobilefood.logic.ProductDetailsActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="35sp"
        android:text="@string/product_details_header"
        android:layout_margin="15dp"
        android:textColor="@android:color/holo_blue_dark" />
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:text="@string/product_details_name_label"/>
        <TextView
            android:id="@+id/product_details_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:paddingLeft="15dp"
            android:text=""/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_vertical"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:text="@string/product_details_quantity_label"/>
        <TextView
            android:id="@+id/product_details_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_vertical"
            android:textSize="20sp"
            android:paddingLeft="15dp"/>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="right">
            <ImageButton
                android:id="@+id/inc_btn"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="right|center_vertical"
                android:layout_marginRight="3dp"
                android:src="@drawable/ic_increment" />
            <ImageButton
                android:id="@+id/dec_btn"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="right|center_vertical"
                android:layout_marginRight="3dp"
                android:src="@drawable/ic_decrement" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_vertical"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:text="@string/product_details_priority_label"/>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="right">
            <Spinner
                android:id="@+id/priority_spinner"
                android:layout_gravity="right|center_vertical"
                android:layout_marginLeft="10dp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"></Spinner>
        </LinearLayout>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:text="@string/product_details_associated_tags_header"/>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="5dp">
        <Button
            android:id="@+id/add_new_tag_btn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add_new_tag"/>
        <Button
            android:id="@+id/add_existing_tag_btn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add_existing_tag"/>
    </LinearLayout>
    <ListView
        android:id="@+id/product_tags_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
</LinearLayout>
